--- a/src/components/GoUp/goUp.css
+++ b/src/components/GoUp/goUp.css
@@ -11,17 +11,17 @@
     border-radius: 50%;
     position: fixed;
     padding: 0.5rem;
-    bottom: -100%;
-    right: 1rem;
+    bottom: -10%;
+    right: 0.5rem;
     cursor: pointer;
     -webkit-box-shadow: rgba(0,0,0,0.8) 0px 0 2px;
     -moz-box-shadow: rgba(0,0,0,0.8) 0 0 2px;
     box-shadow: rgba(0,0,0,0.8) 0 0 2px;
-    transition: bottom 1s ease-in;
+    transition: bottom .5s ease-in;
 }
 
 .show-btn{
-    bottom: 2rem;
+    bottom: 1rem;
 }
 
 .goup-arrow{
