Main added to styled-components

--- a/src/pages/Main/HomeShow.css
+++ b/src/pages/Main/HomeShow.css
@@ -2,7 +2,7 @@
     --back-fondo: #F1F5F9;
     --btn-color: #E2E8F0;
     --btn-color-hov: #CBD5E1;
-    --btn-color-sha: #a6b0bd;;
+    --btn-color-sha: #a6b0bd;
     --target-btn: #c4c4c486;
     --color-shop: #0F172A;
 }
